# Robzyl_K1_zyl1

./: .gitignore  CMakeLists.txt  CMakePresets.json  audio.c  audio.h  compile-with-docker.sh  shortcuts_functions.c
App/: CMakeLists.txt  board.c  main.c  misc.h  radio.c  scheduler.c  version.c  version.h
App/app/: action.c  bands.h  main.c  mem_stats.c  mem_stats.h  menu.c  spectrum.c  spectrum.h  uart.c
App/driver/: bk4819-regs.h  bk4829.c  cpu_temp.c  cpu_temp.h  crc.c  voice.c
App/ui/: helper.c  main.c  menu.c  menu.h  status.c  welcome.c  welcome.h
Core/: py32f071xb.ld
K1_prog_win/: k1prog_win_65k_Robby69.ini
chirp/: Chirp_Robzyl_K1.py  Quansheng_UV-K1 & UV-K5 V3 (F4HWN Fusion)_20260217.img  Quansheng_UV-K1 & UV-K5 V3_20260221.img
